[package]
name = "btfs-s3-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
dryoc = "0.6"           # For sodix-compatible encryption
serde = { version = "1.0", features = ["derive"] } # JSON serialization
serde_json = "1.0"      # JSON handling
sha2 = "0.10"           # SHA-256 for CIDs
multihash = "0.19"      # Multihash for CIDs
cid = "0.11"            # CID generation
rusoto_s3 = "0.48"      # S3 client for go-btfs
rusoto_core = "0.48"    # S3 core
tokio = { version = "1.0", features = ["full"] } # Async runtime
chrono = "0.4"          # Timestamps
dirs = "5.0"            # Home directory
walkdir = "2.5"         # Recursive directory walking
notify = "6.1"          # Filesystem event watching
clap = { version = "4.0", features = ["derive"] } # CLI arguments
log = "0.4"             # Logging
env_logger = "0.11"     # Logging implementation